updating stylesheet & index

--- a/Public/index.html
+++ b/Public/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <!--this is the page you get when opening the website logged out.-->
 <html>
+    <link rel="stylesheet" href="stylesheet.css">
     <header>
-
+        <title>EasyMeetingBooker</title>
     </header>
     <body>
         <!--navbar placeholder-->
-        <script src="/navbar.js" defer></script>
         <div id="navbar-container">
+            <div id="placeholder">
             <nav>
                 <!--put links in here!-->
-            </nav>
+            </nav>    
+
+            </div>
+            
         </div>
 
         <!--page content-->
-        <div class="infoBox">
-            "Sign up or log in to book."
-        </div>
-        <div id="signUpBox">
-            <div id="signUpButton">
-
-            </div>
-            <div id="loginButton">
-
+        <div class="contentBox">
+            <div id="indexText">
+                Sign up or login to make and view bookings.
             </div>
         </div>
-
         <!--footer-->
     </body>
 </html>
