Completed CSS for login, signUp

--- a/Public/login.html
+++ b/Public/login.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
-<!---->
 <html>
+    <link rel="stylesheet" href="stylesheet.css">
     <header>
-
+        <title>Login - EasyMeetingBooker</title>
     </header>
     <body>
         <!--navbar placeholder-->
-        <div id="navbar-container"></div>
-	    <script src="/navbar.js" defer></script>
+        <div id="placeholder"></div>
 
         <!--page content-->
-        
+        <div class="contentBox">
+            <div class="formTitle">
+                <h1>Login</h1>
+            </div>
+            <div class="usernameForm">
+                <h2>Username</h2>
+                <form></form>
+            </div>
+            <div class="passwordForm">
+                <h2>Password</h2>
+                <form></form>
+            </div>
+            <div class="loginButton">
+                <button></button>
+            </div>
+        </div>
     </body>
 </html>
