--- a/Public/signUp.html
+++ b/Public/signUp.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <!--this is the page you get when opening the website logged out.-->
 <html>
+    <link rel="stylesheet" href="stylesheet.css">
     <header>
-
+        <title>Sign Up - EasyMeetingBooker</title>
     </header>
     <body>
         <!--navbar placeholder-->
-        <div id="navbar-container"></div>
-	    <script src="/navbar.js" defer></script>
+        <div id="placeholder"></div>
 
         <!--page content-->
-        
+        <div class="contentBox">
+            <div>
+                <h1>Create an Account</h1>
+            </div>
+            <div class="usernameForm">
+                <h2>Username</h2>
+                <form></form>
+                <p>Must not exceed 16 characters, and must only contain alphanumeric characters.</p>
+            </div>
+            <div class="passwordForm">
+                <h2>Password</h2>
+                <form></form>
+                <p>Must contain upper and lower case letters, at least one number and at least one symbol.</p>
+            </div>
+            <div class="signUpButton">
+                <button></button>
+            </div>
+        </div>
     </body>
 </html>
