Fixed navbar bug, additional CSS edits

--- a/Public/home.html
+++ b/Public/home.html
@@ -9,14 +9,17 @@
     <body>
         <!--navbar placeholder-->
         <script src="/navbar.js" defer></script>
-        <div id="navbar-container">
-            <nav>
-                <!--put links in here!-->
-            </nav>
+        <div id="placeholder">
         </div>
         <!--page content-->
-        <div class="infoBox">
-            <p>"Welcome back, User."</p>
+        <div class="contentBox">
+            <div id="indexText">
+                <p>"Welcome back, User."</p>
+            </div>
+            <hr>
+            <div class="meetings">
+                
+            </div>
         </div>
 
         <!--footer-->
