--- a/Public/signUp.html
+++ b/Public/signUp.html
@@ -7,7 +7,11 @@
     </header>
     <body>
         <!--navbar placeholder-->
-        <div id="placeholder"></div>
+        <div class="navbar-container">
+            <div id="nav">
+            Login
+            </div>
+        </div>
 
         <!--page content-->
         <div class="contentBox">
