Completed navbar UI, aside menu

--- a/Public/home.html
+++ b/Public/home.html
@@ -7,20 +7,33 @@
         <title>EasyMeetingBooker - Home</title>
     </header>
     <body>
-        <!--navbar placeholder-->
+        <!-- nav -->
         <script src="/navbar.js" defer></script>
-        <div id="placeholder">
+        <div class="navbar-container">
+            <div class="profileContainer">
+                <img src="assets/luka_test.jpg" class="profileImage">
+            </div>
+            <a href="login.html" class="navButton">
+                Login
+            </a>
+            <a href="signUp.html" class="navButton">
+                Sign Up
+            </a>
+            <img src="logo_placeholder">
         </div>
+
         <!--page content-->
-        <div class="contentBox">
-            <div id="indexText">
-                <p>"Welcome back, User."</p>
+        <div class="pageDisplay">
+            <div class="contentBox">
+                <div id="indexText">
+                    <p>"Welcome back, User."</p>
+                </div>
+                <hr>
+                <div class="meetings">
+                    
+                </div>
             </div>
-            <hr>
-            <div class="meetings">
-                
-            </div>
-        </div>
+</div>
 
         <!--footer-->
     </body>
