--- a/Public/signUp.html
+++ b/Public/signUp.html
@@ -6,30 +6,43 @@
         <title>Sign Up - EasyMeetingBooker</title>
     </header>
     <body>
-        <!--navbar placeholder-->
+        <!-- nav -->
         <div class="navbar-container">
-            <div id="nav">
-            Login
+            <div class="profileContainer">
+                <img src="assets/luka_test.jpg" class="profileImage">
             </div>
+            <a href="login.html" class="navButton">
+                Login
+            </a>
+            <a href="signUp.html" class="navButton">
+                Sign Up
+            </a>
+            <img src="logo_placeholder">
         </div>
 
         <!--page content-->
-        <div class="contentBox">
-            <div>
-                <h1>Create an Account</h1>
-            </div>
-            <div class="usernameForm">
-                <h2>Username</h2>
-                <form></form>
-                <p>Must not exceed 16 characters, and must only contain alphanumeric characters.</p>
-            </div>
-            <div class="passwordForm">
-                <h2>Password</h2>
-                <form></form>
-                <p>Must contain upper and lower case letters, at least one number and at least one symbol.</p>
-            </div>
-            <div class="signUpButton">
-                <button></button>
+        <div class="pageDisplay">
+            <aside>
+                <a href="#" class="asideButton">Book a Meeting</a>
+                <a href="#" class="asideButton">View or Edit a Meeting</a>
+            </aside>
+            <div class="contentBox">
+                <div>
+                    <h1>Create an Account</h1>
+                </div>
+                <div class="usernameForm">
+                    <h2>Username</h2>
+                    <form></form>
+                    <p>Must not exceed 16 characters, and must only contain alphanumeric characters.</p>
+                </div>
+                <div class="passwordForm">
+                    <h2>Password</h2>
+                    <form></form>
+                    <p>Must contain upper and lower case letters, at least one number and at least one symbol.</p>
+                </div>
+                <button class="signUpButton">
+
+                </button>
             </div>
         </div>
     </body>
