Applied edits to home, login and index.

--- a/Public/home.html
+++ b/Public/home.html
@@ -24,16 +24,20 @@
 
         <!--page content-->
         <div class="pageDisplay">
+            <aside>
+                <a href="#" class="asideButton">Book a Meeting</a>
+                <a href="#" class="asideButton">View or Edit a Meeting</a>
+            </aside>
             <div class="contentBox">
                 <div id="indexText">
-                    <p>"Welcome back, User."</p>
+                    <p>Welcome back, User.</p>
                 </div>
                 <hr>
                 <div class="meetings">
                     
                 </div>
             </div>
-</div>
+        </div>
 
         <!--footer-->
     </body>
