--- a/Public/login.html
+++ b/Public/login.html
@@ -5,24 +5,40 @@
         <title>Login - EasyMeetingBooker</title>
     </header>
     <body>
-        <!--navbar placeholder-->
-        <div id="placeholder"></div>
+        <!-- nav -->
+        <script src="/navbar.js" defer></script>
+        <div class="navbar-container">
+            <div class="profileContainer">
+                <img src="assets/luka_test.jpg" class="profileImage">
+            </div>
+            <a href="login.html" class="navButton">
+                Login
+            </a>
+            <a href="signUp.html" class="navButton">
+                Sign Up
+            </a>
+            <img src="logo_placeholder">
+        </div>
 
         <!--page content-->
-        <div class="contentBox">
-            <div class="formTitle">
-                <h1>Login</h1>
-            </div>
-            <div class="usernameForm">
-                <h2>Username</h2>
-                <form></form>
-            </div>
-            <div class="passwordForm">
-                <h2>Password</h2>
-                <form></form>
-            </div>
-            <div class="loginButton">
-                <button></button>
+        <div class="pageDisplay">
+            <aside>
+                <a href="#" class="asideButton">Book a Meeting</a>
+                <a href="#" class="asideButton">View or Edit a Meeting</a>
+            </aside>
+            <div class="contentBox">
+                <div class="formTitle">
+                    <h1>Login</h1>
+                </div>
+                <div class="usernameForm">
+                    <h2>Username</h2>
+                    <form></form>
+                </div>
+                <div class="passwordForm">
+                    <h2>Password</h2>
+                    <form></form>
+                </div>
+                <button class="loginButton"></button>
             </div>
         </div>
     </body>
