uploaded database, server file, updates to CSS

--- a/Public/login.html
+++ b/Public/login.html
@@ -30,15 +30,15 @@
                 <div class="formTitle">
                     <h1>Login</h1>
                 </div>
-                <div class="usernameForm">
-                    <h2>Username</h2>
-                    <form></form>
+                <div class="login">
+                    <form action="home.html">
+                        <label for="username">Username</label><br>
+                            <input type="text" id="fname" name="fname" value="John"><br>
+                        <label for="password">Password</label><br>
+                            <input type="text" id="lname" name="lname" value="Doe"><br><br>
+                        <input id="loginButton" type="submit" value="Submit">
+                    </form> 
                 </div>
-                <div class="passwordForm">
-                    <h2>Password</h2>
-                    <form></form>
-                </div>
-                <button class="loginButton"></button>
             </div>
         </div>
     </body>
