Fixed navbar UI, added logo

--- a/Public/book.html
+++ b/Public/book.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <!--importing files-->
     <link rel="stylesheet" href="stylesheet.css">
     <header>
-        <title>EasyMeetingBooker - Home</title>
+        <title>EasyMeetingBooker - Book a Room</title>
     </header>
     <body>
         <!-- nav -->
-        <div class="navbarContainer">
+        <script src="/navbar.js" defer></script>
+        <div class="navbar-container">
             <div class="profileContainer">
                 <img src="assets/luka_test.jpg" class="profileImage">
             </div>
-            <div class="navItemContainer">
-            </div>
-            <div class="logoContainer">
-                <img class="logo" src="assets/EasyBook.png">    
-            </div>            
+            <img src="logo_placeholder">
         </div>
 
         <!--page content-->
@@ -25,16 +21,17 @@
                 <a href="#" class="asideButton">View or Edit a Meeting</a>
             </aside>
             <div class="contentBox">
-                <div id="indexText">
-                    <p>Welcome back, User.</p>
-                </div>
-                <hr>
-                <div class="meetings">
-                    
-                </div>
+                <h1>
+                    Make a Booking
+                </h1>
+                <h2>
+                    1. Choose a day & timeslot
+                </h2>
+                <h2>
+                    2. Confirm Details
+                </h2>
             </div>
         </div>
-
         <!--footer-->
     </body>
 </html>
