--- a/Public/index.html
+++ b/Public/index.html
@@ -7,18 +7,21 @@
     </header>
     <body>
         <!-- nav -->
-        <script src="/navbar.js" defer></script>
-        <div class="navbar-container">
+        <div class="navbarContainer">
             <div class="profileContainer">
                 <img src="assets/luka_test.jpg" class="profileImage">
             </div>
-            <a href="login.html" class="navButton">
-                Login
-            </a>
-            <a href="signUp.html" class="navButton">
-                Sign Up
-            </a>
-            <img src="logo_placeholder">
+            <div class="navItemContainer">
+                <a href="login.html" class="navButton">
+                    Login
+                </a>
+                <a href="signUp.html" class="navButton">
+                    Sign Up
+                </a>
+            </div>
+            <div class="logoContainer">
+                <img class="logo" src="assets/EasyBook.png">    
+            </div>            
         </div>
 
         <!--page content-->
