navbar changes, formatting changes

--- a/Public/book.html
+++ b/Public/book.html
@@ -6,14 +6,23 @@
     </header>
     <body>
         <!-- nav -->
-        <script src="/navbar.js" defer></script>
-        <div class="navbar-container">
-            <div class="profileContainer">
-                <img src="assets/luka_test.jpg" class="profileImage">
+        <div class="navbarContainer">
+            <div class="navItemContainer">
+                <div class="profileContainer">
+                    <img src="assets/luka_test.jpg" class="profileImage">
+                </div>
+                <a href="login.html" class="navButton">
+                    Login
+                </a>
+                <a href="signUp.html" class="navButton">
+                    Sign Up
+                </a>
             </div>
-            <img src="logo_placeholder">
+            <div class="logoContainer">
+                <img class="logo" src="assets/EasyBook.png">    
+            </div>
         </div>
-
+        
         <!--page content-->
         <div class="pageDisplay">
             <aside>
