--- a/Public/home.html
+++ b/Public/home.html
@@ -8,16 +8,21 @@
     <body>
         <!-- nav -->
         <div class="navbarContainer">
-            <div class="profileContainer">
-                <img src="assets/luka_test.jpg" class="profileImage">
-            </div>
             <div class="navItemContainer">
+                <div class="profileContainer">
+                    <img src="assets/luka_test.jpg" class="profileImage">
+                </div>
+                <a href="login.html" class="navButton">
+                    Login
+                </a>
+                <a href="signUp.html" class="navButton">
+                    Sign Up
+                </a>
             </div>
             <div class="logoContainer">
                 <img class="logo" src="assets/EasyBook.png">    
-            </div>            
+            </div>
         </div>
-
         <!--page content-->
         <div class="pageDisplay">
             <aside>
