--- a/Public/signUp.html
+++ b/Public/signUp.html
@@ -7,7 +7,7 @@
     </header>
     <body>
         <!-- nav -->
-        <div class="navbar-container">
+        <div class="navbarContainer">
             <div class="profileContainer">
                 <img src="assets/luka_test.jpg" class="profileImage">
             </div>
@@ -17,7 +17,9 @@
             <a href="signUp.html" class="navButton">
                 Sign Up
             </a>
-            <img src="logo_placeholder">
+            <div class="logoContainer">
+                <img class="logo" src="assets/EasyBook.png">    
+            </div>  
         </div>
 
         <!--page content-->
