--- a/Public/login.html
+++ b/Public/login.html
@@ -7,9 +7,6 @@
     <body>
         <!-- nav -->
         <div class="navbarContainer">
-            <div class="profileContainer">
-                <img src="assets/luka_test.jpg" class="profileImage">
-            </div>
             <div class="navItemContainer">
                 <a href="login.html" class="navButton">
                     Login
@@ -20,7 +17,7 @@
             </div>
             <div class="logoContainer">
                 <img class="logo" src="assets/EasyBook.png">    
-            </div>            
+            </div>
         </div>
         <!--page content-->
         <div class="pageDisplay">
@@ -35,10 +32,10 @@
                 <div class="login">
                     <form action="home.html">
                         <label for="username">Username</label><br>
-                            <input type="text" id="fname" name="fname" value="John"><br>
+                            <input type="text" id="fname" name="fname" value=""><br>
                         <label for="password">Password</label><br>
-                            <input type="text" id="lname" name="lname" value="Doe"><br><br>
-                        <input id="loginButton" type="submit" value="Submit">
+                            <input type="text" id="lname" name="lname" value=""><br><br>
+                        <input id="loginButton" type="submit" value="Login">
                     </form> 
                 </div>
             </div>
