applying navbar changes, uploading settings.html

--- a/Public/editViewBooking.html
+++ b/Public/editViewBooking.html
@@ -6,10 +6,16 @@
     </header>
     <body>
         <!-- nav -->
-        <div class="navbarContainer">
+        <div class="navbarContainerHome">
             <div class="navItemContainer">
-                <div class="profileContainer">
-                    <img src="assets/luka_test.jpg" class="profileImage">
+                <div class="dropdownContainer">
+                    <div class="profileContainer">
+                        <img src="assets/luka_test.jpg" class="profileImage">
+                    </div>
+                    <div class="dropdownContent">
+                        <a href="settings.html" class="dropdownItem">Settings</a>
+                        <a href="index.html" class="dropdownItem">Log Out</a>
+                    </div>
                 </div>
                 <a href="login.html" class="navButton">
                     Login
@@ -26,8 +32,8 @@
         <!--page content-->
         <div class="pageDisplay">
             <aside>
-                <a href="#" class="asideButton">Book a Meeting</a>
-                <a href="#" class="asideButton">View or Edit a Meeting</a>
+                <a href="book.html" class="asideButton">Book a Meeting</a>
+                <a href="editViewBooking.html" class="asideButton">View or Edit a Meeting</a>
             </aside>
             <div class="contentBox">
                 <h1>View Bookings</h1>
