--- a/Public/index.html
+++ b/Public/index.html
@@ -7,7 +7,7 @@
     </header>
     <body>
         <!-- nav -->
-        <div class="navbarContainer">
+        <div class="navbarContainerIndex">
             <div class="navItemContainer">
                 <a href="login.html" class="navButton">
                     Login
@@ -24,8 +24,8 @@
         <!--page content-->
         <div class="pageDisplay">
             <aside>
-                <a href="#" class="asideButton">Book a Meeting</a>
-                <a href="#" class="asideButton">View or Edit a Meeting</a>
+                <a href="signUp.html" class="asideButton">Book a Meeting</a>
+                <a href="signUp.html" class="asideButton">View or Edit a Meeting</a>
             </aside>
             <div class="contentBox">
                 <div id="indexText">
