--- a/Public/login.html
+++ b/Public/login.html
@@ -6,7 +6,7 @@
     </header>
     <body>
         <!-- nav -->
-        <div class="navbarContainer">
+        <div class="navbarContainerIndex">
             <div class="navItemContainer">
                 <a href="login.html" class="navButton">
                     Login
@@ -16,14 +16,14 @@
                 </a>
             </div>
             <div class="logoContainer">
-                <img class="logo" src="assets/EasyBook.png">    
-            </div>
+                <img class="logo" src="assets/EasyBook.png">
+            </div>            
         </div>
         <!--page content-->
         <div class="pageDisplay">
             <aside>
-                <a href="#" class="asideButton">Book a Meeting</a>
-                <a href="#" class="asideButton">View or Edit a Meeting</a>
+                <a href="login.html" class="asideButton">Book a Meeting</a>
+                <a href="login.html" class="asideButton">View or Edit a Meeting</a>
             </aside>
             <div class="contentBox">
                 <div class="formTitle">
