--- a/Public/settings.html
+++ b/Public/settings.html
@@ -36,13 +36,7 @@
                 <a href="editViewBooking.html" class="asideButton">View or Edit a Meeting</a>
             </aside>
             <div class="contentBox">
-                <div id="indexText">
-                    <p>Welcome back, User.</p>
-                </div>
-                <hr>
-                <div class="meetings">
-                    
-                </div>
+                <!--password form-->
             </div>
         </div>
         <script src="navbar.js"></script>
