--- a/Public/signUp.html
+++ b/Public/signUp.html
@@ -7,26 +7,25 @@
     </header>
     <body>
         <!-- nav -->
-        <div class="navbarContainer">
-            <div class="profileContainer">
-                <img src="assets/luka_test.jpg" class="profileImage">
+        <div class="navbarContainerIndex">
+            <div class="navItemContainer">
+                <a href="login.html" class="navButton">
+                    Login
+                </a>
+                <a href="signUp.html" class="navButton">
+                    Sign Up
+                </a>
             </div>
-            <a href="login.html" class="navButton">
-                Login
-            </a>
-            <a href="signUp.html" class="navButton">
-                Sign Up
-            </a>
             <div class="logoContainer">
-                <img class="logo" src="assets/EasyBook.png">    
-            </div>  
+                <img class="logo" src="assets/EasyBook.png">
+            </div>            
         </div>
 
         <!--page content-->
         <div class="pageDisplay">
             <aside>
-                <a href="#" class="asideButton">Book a Meeting</a>
-                <a href="#" class="asideButton">View or Edit a Meeting</a>
+                <a href="signUp.html" class="asideButton">Book a Meeting</a>
+                <a href="signUp.html" class="asideButton">View or Edit a Meeting</a>
             </aside>
             <div class="contentBox">
                 <div>
